prevent overflow of tags over filter bar

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ main {
 }
 
 .chosen-tags {
-    height: 80px;
+    height: auto;
     width: 65%;
     padding: 10px;
     background-color: white;
